# routers/review.js
@@ -1,0 +1,8 @@
+import express from "express";
+import { createItem } from "../controllers/review.js";
+
+const routers = express.Router()
+
+routers.post('/', createItem)
+
+export default routers
